--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@
 name = "gallery"
 main = ".svelte-kit/cloudflare/_worker.js"
 compatibility_date = "2026-01-03"
-compatibility_flags = [ "nodejs_als" ]
+compatibility_flags = [ "nodejs_als", "nodejs_compat" ]
 
 [assets]
 binding = "ASSETS"
